--- a/css/brfv4_examples_theme.css
+++ b/css/brfv4_examples_theme.css
@@ -23,11 +23,15 @@ video 			{ position: absolute; background-color: transparent; display: none;  ma
   filter: grayscale(100%);
 }
 #overlay {
-  /* background-color: rgba(0,0,0,0.5); */
+  /* background-color: rgba(0,20,0,0.5); */
   z-index: 999;
   position: absolute;
   width:1280px;
   height: 720px;
+}
+
+#random {
+  /* background-color: rgb(0,50,0); */
 }
 
 svg {
